# stm32-cmake

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Modules/: FindCMSIS.cmake  FindSTM32Cube.cmake  FindSTM32HAL.cmake  FindSTM32LL.cmake  STM32.cmake
Modules/STM32/: Linker.cmake  Util.cmake  syscalls.c
Modules/STM32/F1/: STM32F103C8.cmake  STM32F103VC.cmake  STM32F103ZE.cmake  cmake.cmake  ldscript.template
Modules/STM32/F4/: STM32F411CE.cmake  cmake.cmake  ldscript.template
